cambios en el index

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 </head>
 <body>
     <!--Ejemplo de GRID-->
+    <nav>
+        <ul>
+            <li>compra</li>
+            <li>venta</li>
+            <li>prueba</li>
+            <li>contacto</li>
+        </ul>
+    </nav>
     <div class="padre">
         <div class="hijoUno">
-            Uno
+            menu
         </div>
         <div class="hijoDos">
             Dos
