--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 </head>
 <body>
     <!--Ejemplo de GRID-->
-    <nav>
-        <ul>
-            <li>compra</li>
-            <li>venta</li>
-            <li>prueba</li>
-            <li>contacto</li>
-        </ul>
-    </nav>
+    
+
+    <main>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur, rerum tempora expedita soluta earum unde impedit harum maxime minima pariatur autem cum dolore officia nemo veniam accusantium ipsam sunt rem.
+        </p>
+        <nav>
+            <ul>
+                <li>compra</li>
+                <li>venta</li>
+                <li>prueba</li>
+                <li>contacto</li>
+            </ul>
+        </nav>
+      
+    </main>
     <div class="padre">
         <div class="hijoUno">
             menu
